// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomButton disabled renders disabled correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "bottom": 20,
      "left": 50,
      "position": "absolute",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3CC8E6",
        "borderRadius": 50,
        "height": 48,
        "justifyContent": "center",
        "opacity": 0.6,
        "width": 650,
      }
    }
    testID="bottomButton"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            undefined,
          ],
        ]
      }
    >
      BUTTON TEXT
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`BottomButton renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "bottom": 20,
      "left": 50,
      "position": "absolute",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3CC8E6",
        "borderRadius": 50,
        "height": 48,
        "justifyContent": "center",
        "opacity": 1,
        "width": 650,
      }
    }
    testID="bottomButton"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            undefined,
          ],
        ]
      }
    >
      BUTTON TEXT
    </Text>
  </View>
</RCTSafeAreaView>
`;
